# barcode-scanner

./: .gitignore  .gitmodules  README.md  packaging.spec  pyproject.toml
.github/workflows/: bump_version.yaml  ci.yaml  release.yaml
src/: cli.py  config.py  main.py  paths.py
src/configs/: logging_config.yaml  settings.yaml
src/database/: __init__.py
src/database/sqlite/: __init__.py  db.py
src/generators/: code_generator.py  sheets.py  tickets.py
src/gui/: barcode_scanner_gui.py
src/parsers/: yaml.py
tests/: conftest.py  helpers.py
tests/testcases/database/: test_database_init.py
tests/testcases/database/sqlite/: test_sqlite.py
tests/testcases/generators/: test_sheets.py  test_tickets.py
tests/testcases/parsers/: test_yaml.py
